--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "prisma": "^4.1.1"
   }
 }
